--- a/GambaTracker/GambaTracker.csproj
+++ b/GambaTracker/GambaTracker.csproj
@@ -12,4 +12,8 @@
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
+  </ItemGroup>
 </Project>
